--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.5.0",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "serverless-http": "^2.7.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
