--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,13 @@
 [build]
 functions="src/serverless"
+publish="public"
 
 [[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/index"
+  from = "/api/*"
+  to = "/.netlify/serverless/index/:splat"
   status = 200
   force = true
+
+[context.production.environment]
+  API_PREFIX = "/.netlify/serverless/index/"
+  NODE_VERSION = "v14.18.0"
