--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "passport": "^0.5.0",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "serverless-http": "^2.7.0"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
     "jest": "^27.2.5",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "serverless-http": "^2.7.0"
   }
 }
