--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
-    "neo4j-driver": "^4.4.9",
+    "neo4j-driver": "^5.1.0",
     "passport": "^0.6.0",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
